# streamlit

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
src/pages/: generator.py  segmenter.py  upscaler.py
